--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = {extras = ["standard"], version = "^0.23.1"}
 sqlalchemy = "^2.0.19"
 psycopg2-binary = "^2.9.6"
 requests = "^2.31.0"
+pre-commit = "^3.3.3"
 
 
 [tool.poetry.scripts]
