--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
     image: postgres:15.1-alpine
-    container_name: db
+    container_name: database
     restart: always
     environment:
       POSTGRES_PASSWORD: magic
