--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,9 +42,9 @@ repos:
         exclude: "__init__.py"
         args: ["--ignore=E501,F821", "--max-line-length=120"]
 
-## Проверка статических типов с помощью mypy
-#-   repo: https://github.com/pre-commit/mirrors-mypy
-#    rev: v0.991
-#    hooks:
-#    -   id: mypy
-#        exclude: 'migrations'
+# Проверка статических типов с помощью mypy
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.991
+    hooks:
+    -   id: mypy
+        exclude: 'migrations'
