--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ sqlalchemy = "^2.0.19"
 psycopg2-binary = "^2.9.6"
 requests = "^2.31.0"
 pre-commit = "^3.3.3"
+redis = "^4.6.0"
+fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
+asyncio = "^3.4.3"
 
 
 [tool.poetry.scripts]
